--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -86,6 +86,13 @@
             <artifactId>oshi-core</artifactId>
             <version>5.7.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <!-- 打包 -->
